# CAdapt

./: CMakeLists.txt  ElfPtrs.cpp  ElfPtrs.h  ErrorLog.cpp  ErrorLog.h  GlibcOper.cpp  GlibcOper.h  README.md  README_en.md  README_ja.md  README_zh-Hant.md  main.cpp
ReferenceData/: ModifiersSolym.c
